# bioh

./: README.md  best_model.pth  evaluate.py  evaluate_v2.py  hybrid_ffnn_model.pth  hybrid_lstm_model.pth  hybrid_model.py  hybrid_model_v2.py  hybrid_transformer_model.pth  main.ipynb  main.py  processed_data_IR_final.csv  pyproject.toml  s_matrix.pkl  scaler.pkl  simulation.py  simulation_v2.py  splits.pkl
data/: data-for-sim.xlsx  data.xlsx
